docs(engine): record JNI decision in DESIGN §2; bump ORGE-ENGINE gitlink
Updates DESIGN §2 + native-integration notes to JNI (not Panama, preview
on Java 21); adds the multi-platform packaging follow-up note; advances
the ORGE-ENGINE submodule pointer to the kernel+JNI commits.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>